feat(indian-farmer-assistance-app): Add admin service enhancements, API gateway implementation, and AI service optimizations
- Add audit logging aspect and interceptor for comprehensive request/response tracking
- Implement WebMvcConfig for cross-cutting concerns and request handling
- Add data retention service for managing audit log lifecycle
- Enhance AuditLog and Document entities with additional metadata fields
- Implement API gateway with authentication, authorization, and rate limiting filters
- Add gateway configuration, OpenAPI documentation, and fallback controller
- Create bandwidth service with adaptive quality and data usage monitoring
- Add GPU utilities and model caching for AI service performance optimization
- Implement disease detection model integration tests
- Add common utilities for error handling, crash recovery, and performance optimization
- Consolidate property-based tests into unified unit test suite
- Update application configurations for dev, staging, and production environments
- Add comprehensive documentation files for agriculture inputs and KRISHI portal
- Initialize .gitignore for project-wide version control management